# rust-fk-sync

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Jenkinsfile  justfile
cli/: Cargo.toml
cli/src/: main.rs
libs/discovery/: Cargo.toml
libs/discovery/src/: lib.rs
libs/protos/: Cargo.toml  build.rs
libs/protos/src/: fk_app.rs  fk_data.rs  lib.rs
libs/query/: Cargo.toml  build.rs
libs/query/examples/: status_1.fkpb  status_2_logs.fkpb  status_3_readings.fkpb
libs/query/src/: device.rs  lib.rs  portal.rs
libs/store/: Cargo.toml
libs/store/src/: lib.rs  merge.rs  migrations.rs  model.rs  parse_reply.rs
libs/sync/: Cargo.toml
libs/sync/src/: files.rs  lib.rs  progress.rs  proto.rs  server.rs
libs/sync/src/transport/: mod.rs
src/: main.rs
