[package]
name = "cli"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies.discovery]
path = "../libs/discovery"

[dependencies.query]
path = "../libs/query"

[dependencies.sync]
path = "../libs/sync"

[dependencies]
anyhow = "1.0.72"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.3.19", features = ["derive"] }
hex = "0.4.3"
lazy_static = "1.4.0"
quick-protobuf = "0.8.1"
range-set-blaze = "0.1.9"
socket2 = "0.5.3"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
varint = "0.9.0"
