[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = "4.2.1"
hex = "0.4.3"
lazy_static = "1.4.0"
quick-protobuf = "0.8.1"
range-set-blaze = "0.1.2"
socket2 = "0.4.7"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
varint = "0.9.0"
