[package]
name = "protos"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
prost = "0.11.9"
tracing = "0.1.37"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }

# [build-dependencies]
# prost-build = "0.11.9"