[package]
name = "protos"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.72"
prost = "0.11.9"
tracing = "0.1.37"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }

# [build-dependencies]
# prost-build = "0.11.9"