[package]
name = "query"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing = "0.1.37"
# This is using rustls-tls instead of native-tls-vendored or something because
# of a build error about a missing arm-linux-androideabi-ranlib.
reqwest = { version = "0.11.17", default-features = false, features = ["gzip", "stream", "rustls-tls", "json"] }
prost = "0.11.9"
bytes = "1.4.0"
miette = "5.8.0"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
base64 = "0.21.0"

[build-dependencies]
prost-build = "0.11.9"
