[package]
name = "query"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies.protos]
path = "../protos"

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing = "0.1.37"
prost = "0.11.9"
bytes = "1.4.0"
miette = "5.8.0"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
base64 = "0.21.0"
chrono = { version = "0.4.26", features = ["serde"] }
async-stream = "0.3.5"
tokio-util = "0.7.8"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
# This is using rustls-tls instead of native-tls-vendored or something because
# of a build error about a missing arm-linux-androideabi-ranlib.
reqwest = { version = "0.11.17", default-features = false, features = ["gzip", "stream", "rustls-tls", "json"] }
async-trait = "0.1.68"
governor = "0.5.1"
nonzero_ext = "0.3.0"
