[package]
name = "query"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies.protos]
path = "../protos"

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
tracing = "0.1.37"
prost = "0.11.9"
bytes = "1.4.0"
miette = "5.10.0"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
async-stream = "0.3.5"
tokio-util = "0.7.8"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
# This is using rustls-tls instead of native-tls-vendored or something because
# of a build error about a missing arm-linux-androideabi-ranlib.
reqwest = { version = "0.11.18", default-features = false, features = ["gzip", "stream", "rustls-tls", "json"] }
async-trait = "0.1.72"
governor = "0.6.0"
nonzero_ext = "0.3.0"
