[package]
name = "store"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
thiserror = "1.0.40"
tracing = "0.1.37"
query = { path = "../query" }
chrono = "0.4.24"
