[package]
name = "store"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies.query]
path = "../query"

[dependencies]
anyhow = "1.0.72"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
thiserror = "1.0.44"
tracing = "0.1.37"
chrono = "0.4.26"
miette = "5.10.0"
hex = "0.4.3"
