[package]
name = "sync"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies.discovery]
path = "../discovery"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.68"
backoff = { version = "0.4.0", features = ["tokio"] }
hex = "0.4.3"
lazy_static = "1.4.0"
miette = "5.8.0"
quick-protobuf = "0.8.1"
range-set-blaze = "0.1.5"
socket2 = "0.4.7"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
varint = "0.9.0"
