[package]
name = "sync"
version = "0.1.0"
authors = [ "Jacob Lewallen <jlewallen@gmail.com>" ]
edition = "2021"

[dependencies.discovery]
path = "../discovery"

[dependencies.protos]
path = "../protos"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.26"
glob = "0.3.1"
hex = "0.4.3"
itertools = "0.11.0"
lazy_static = "1.4.0"
miette = "5.10.0"
prost = "0.11.9"
quick-protobuf = "0.8.1"
range-set-blaze = "0.1.9"
serde_json = "1.0.104"
socket2 = "0.5.3"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
varint = "0.9.0"
